--- a/Revcipe/Revcipe.entitlements
+++ b/Revcipe/Revcipe.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)school.rev.c0.Revcipe</string>
+		<string>$(AppIdentifierPrefix)school.rev.Revcipe</string>
 	</array>
 </dict>
 </plist>
