--- a/Revcipe/GoogleService-Info.plist
+++ b/Revcipe/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyAGidXroCFmstxdVABf0OSDiOCuS_o9XuE</string>
+	<string>AIzaSyDwXAg36LuKoP7JqCrFtdG_qTmAhL5MbRA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>74608232623</string>
+	<string>272100997607</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>school.rev.c0.Revcipe</string>
+	<string>school.rev.Revcipe</string>
 	<key>PROJECT_ID</key>
-	<string>revcipes</string>
+	<string>revcipe-43d39</string>
 	<key>STORAGE_BUCKET</key>
-	<string>revcipes.appspot.com</string>
+	<string>revcipe-43d39.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:74608232623:ios:8054de45bad4843c5e2c5a</string>
+	<string>1:272100997607:ios:61fef372cd6df4aef9a542</string>
 </dict>
 </plist>
